# focal-mcp

./: .gitignore  LICENSE  README.md  SPEC.md  agents.md  pyproject.toml
.github/workflows/: publish.yml
src/focal_mcp_server/: app.py  logging_utils.py  mcp.py  notifications.py  web.py  workspace.py
