[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focal-mcp-server"
version = "0.1.1"
description = "FOCAL MCP Server (Framework for Orchestrated Central AI ruLes)"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
]


[project.urls]
Homepage = "https://github.com/BAESI/focal-mcp"
Issues = "https://github.com/BAESI/focal-mcp/issues"

[project.scripts]
focal-mcp-server = "focal_mcp_server.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
